# PolimiRoboticsProjects

./: .gitignore  README.md
robotics/catkin_ws/devel/include/parameter_test/: parametersConfig.h
robotics/catkin_ws/devel/include/service/: AddTwoIntsRequest.h  AddTwoIntsResponse.h
robotics/catkin_ws/devel/lib/actionlib_tutorials/: fibonacci_client  fibonacci_client2  fibonacci_server
robotics/catkin_ws/devel/lib/custom_messages/: pub_custom  sub_custom
robotics/catkin_ws/devel/lib/message_filters_example/: filter_subscriber  filter_subscriber_policy  multi_publisher
robotics/catkin_ws/devel/lib/parameter_test/: param_first  param_second
robotics/catkin_ws/devel/lib/pkgconfig/: actionlib_tutorials.pc  custom_messages.pc  message_filters_example.pc  parameter_test.pc  pub_sub.pc  pub_sub_same.pc  service.pc  tf_examples.pc  timer.pc
robotics/catkin_ws/devel/lib/pub_sub/: pub  sub
robotics/catkin_ws/devel/lib/pub_sub_same/: test_pub  test_sub
robotics/catkin_ws/devel/lib/service/: add_two_int  client
robotics/catkin_ws/devel/lib/tf_examples/: get_tf  tf_pub
robotics/catkin_ws/devel/lib/timer/: timed_pub
robotics/catkin_ws/src/asynch/src/: asynch_sub.cpp  pub.cpp  standard_sub.cpp
robotics/catkin_ws/src/custom_messages/: CMakeLists.txt
robotics/catkin_ws/src/custom_messages/src/: pub.cpp  sub.cpp
robotics/catkin_ws/src/fibonacci/src/: fibonacci_client.cpp  fibonacci_client2.cpp  fibonacci_server.cpp
robotics/catkin_ws/src/first_project/: CMakeLists.txt  info.txt  package.xml
robotics/catkin_ws/src/first_project/cfg/: config.rviz
robotics/catkin_ws/src/first_project/launch/: launch.launch
robotics/catkin_ws/src/first_project/src/: .sector_times.cpp.swp  gps_odometer.cpp  odometer.cpp  sector_times.cpp
robotics/catkin_ws/src/message_filters/: CMakeLists.txt
robotics/catkin_ws/src/nav2d_conf/cfg/: dwa_local_planner_params.yaml  global_costmap_params.yaml  move_base_params.yaml
robotics/catkin_ws/src/nav2d_conf/launch/: turtlebot_amcl.launch
robotics/catkin_ws/src/pub_sub/: CMakeLists.txt
robotics/catkin_ws/src/pub_sub/src/: pub.cpp
robotics/catkin_ws/src/second_project/: CMakeLists.txt  package.xml
robotics/catkin_ws/src/second_project/cfg/: config.rviz  robot_navigation.rviz
robotics/catkin_ws/src/second_project/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
robotics/catkin_ws/src/second_project/csv/: goals.csv
robotics/catkin_ws/src/second_project/goal_recorder/: goal_recorder.cpp
robotics/catkin_ws/src/second_project/launch/: amcl.launch.xml  clear_costmaP  filter.launch  gmapping.launch.xml  mapping.launch  navigation.launch  record_goals.launch  slam_toolbox.launch.xml
robotics/catkin_ws/src/second_project/map/: map.pgm  map.yaml  map3.pgm  map3.yaml  map3_cropped.pgm  map3_cropped.yaml  map3_filtered.pgm  map6.pgm  map6.yaml  map6_cropped.pgm  map6_cropped.yaml  map_fixed.pgm  map_trimmed.pgm
robotics/catkin_ws/src/second_project/mapping/: laser_scan_merger.cpp  odom_to_tf.cpp
robotics/catkin_ws/src/second_project/navigation/: navigation.cpp
robotics/catkin_ws/src/second_project/scripts/: filter_map.py  goal_recorder.py
robotics/catkin_ws/src/second_project/src/: laser_scan_merger.cpp
robotics/catkin_ws/src/second_project/stage/: my_robot.inc  robot.world
robotics/catkin_ws/src/service/: CMakeLists.txt
robotics/catkin_ws/src/stage/: turtlebot.inc
robotics/catkin_ws/src_labs/pub_sub_same/: CMakeLists.txt
robotics/catkin_ws/src_labs/stage/: maze.world
robotics/catkin_ws/src_labs/tf/: CMakeLists.txt
robotics/data/: 2025-03-19-13-00-43.bag
robotics/docker/: Dockerfile
robotics/ros_multi_machine/: connect_network.sh  create_network.sh  start_pc1.sh  start_pc2.sh
robotics/windows_users/: start.ps1
(+48 files in other folders)
